--- a/rn_codepush/android/app/src/main/res/values/strings.xml
+++ b/rn_codepush/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
+    <string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey">I9usOPdaFgsUXB5UOzmkKDo2JeF1BJKwMlm_Q</string>
     <string name="app_name">rn_codepush</string>
 </resources>
